# apps/www/src/schemas/conta.ts
@@ -1,0 +1,14 @@
+import * as v from "valibot"
+
+export const ContaSchema = v.object({
+  id: v.pipe(v.number(), v.integer()),
+  username: v.string(),
+  email: v.string(),
+  full_name: v.string(),
+  last_name: v.string(),
+  is_authenticated: v.boolean(),
+})
+
+export type TContaSchema = v.InferInput<typeof ContaSchema>
+
+export const parse = v.parse
